--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
-                                             android:layout_marginBottom="5dp"
+                                             android:layout_marginBottom="15dp"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools">
 
@@ -42,6 +42,7 @@
 
     <RatingBar android:layout_width="wrap_content"
                android:layout_height="wrap_content"
+               style="?android:attr/ratingBarStyleSmall"
                android:id="@+id/rb_product_rating"
                app:layout_constraintTop_toBottomOf="@+id/tv_product_price"
                app:layout_constraintLeft_toLeftOf="parent"
